<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/bg">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="117dp"
                android:layout_height="111dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="147dp"
                android:layout_marginTop="88dp"
                android:layout_marginEnd="147dp"
                android:layout_marginBottom="1dp"
                android:src="@drawable/deska" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/edit"
                android:drawableLeft="@drawable/ic_mode_edit_black_24dp"
                android:drawablePadding="15dp"
                android:text="Edit"
                android:textSize="25sp"
                android:layout_marginTop="160dp"
                android:layout_marginLeft="210dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Deska Mukhamad Alfian "
                android:layout_marginTop="10dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="65dp"
                android:paddingStart="85dp"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:drawableTop="@drawable/ic_person_black_24dp"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="40dp"
                android:text="informasi"
                android:layout_marginRight="70dp"
                android:paddingStart="20dp"/>

            <TextView
                android:drawableTop="@drawable/ic_remove_red_eye_black_24dp"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="160dp"
                android:layout_marginRight="70dp"
                android:paddingStart="20dp"/>
            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="lihat"
                android:layout_marginTop="100dp"
                android:layout_marginLeft="178dp"
                android:layout_marginRight="50dp"
                android:paddingStart="20dp"
                android:textSize="14sp"/>
            <TextView
                android:drawableTop="@drawable/ic_more_horiz_black_24dp"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="260dp"
                android:layout_marginRight="50dp"
                android:paddingStart="20dp"/>
            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="lainnya"
                android:layout_marginTop="100dp"
                android:layout_marginLeft="270dp"
                android:layout_marginRight="50dp"
                android:paddingStart="20dp"
                android:textSize="14sp"/>

            <TextView
                android:drawableLeft="@drawable/ic_account_balance_black_24dp"
                android:text="@string/kerja"
                android:textSize="25dp"
                android:drawablePadding="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="170dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="10dp"
                android:paddingStart="10dp"/>

            <TextView
                android:drawableLeft="@drawable/ic_school_black_24dp"
                android:text="@string/smp"
                android:textSize="25dp"
                android:drawablePadding="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="220dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="10dp"
                android:paddingStart="10dp"/>

            <TextView
                android:drawableLeft="@drawable/ic_school_black_24dp"
                android:text="@string/sma"
                android:textSize="25dp"
                android:drawablePadding="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="270dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="10dp"
                android:paddingStart="10dp"/>

            <TextView
                android:drawableLeft="@drawable/ic_school_black_24dp"
                android:text="@string/pt"
                android:textSize="25dp"
                android:drawablePadding="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="320dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="10dp"
                android:paddingStart="10dp"/>

            <TextView
                android:drawableLeft="@drawable/ic_location_on_black_24dp"
                android:text="@string/alamat"
                android:textSize="25dp"
                android:drawablePadding="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="390dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="10dp"
                android:paddingStart="10dp"/>
        </RelativeLayout>

    </LinearLayout>


</ScrollView>